# mlpc2025-sound-event-detection

./: .gitignore  1. Case Study.ipynb  2. Annotation Quality.ipynb  3. Audio Features.ipynb  3. Audio Fratures.ipynb  4. Text Features.ipynb  Labeling Function.ipynb  MLPC_DataExploration_Presentation.pptx  README.md  Text features.ipynb  faiss.ipynb  pyproject.toml  readme.ipynb  requirements-cpu.txt  requirements-gpu.txt  setup.py  silent_region_clusterer.ipynb  verify_installation.py
T3-Classification/: 1. Labeling Function.ipynb  6. Analysing Predictions.ipynb  BiLSTM.ipynb  Labeling Function.ipynb  faiss.ipynb  optimized_sound_mapping.json  sound_config.py
T3-Classification/models/: GradientBoosting_feature_importance.ipynb  Transformer.ipynb
T3-Classification/models/lstm/: BiLSTM.ipynb  BiLSTM.pth  BiLSTM_weights.pth  CLSTM_WEIGHTS.pth  lstm_full_model.pth  lstm_weights.pth
T4-Challenge/: MLPC_Challenge_Presentation.pptx  customer_predictions.csv  projection_Transformer(4)_1024.ipynb
T4-Challenge/Baseline System/: BaselineSystem.ipynb
artifacts/predictions/: customer_predictions.csv
artifacts/presentations/: MLPC2025_Challenge_Presentation.pptx
assets/results/: Challenge_Results.md
models/experimental/clstm/: CLSTM.pth  (+1 more)
notebooks/2_Data_Exploration/: 2.1_Case_Study.ipynb  2.2_Annotation_Quality.ipynb  2.4_Text_Features.ipynb  Case_Study.ipynb
notebooks/3_Classification/: 3.1_Labeling_Function.ipynb
notebooks/4_Challenge/: transformer_sed.ipynb
scripts/: install.py  setup_data.py
src/: config.py
src/data/: loaders.py
src/features/: audio.py
(+7 files in other folders)
