[project]
name = "mlpc2025-sound-event-detection"
version = "0.1.0"
description = "Sound Event Detection System for MLPC 2025"
authors = [{name = "Team Fumbling"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

[project.optional-dependencies]
cpu = [
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "onnxruntime==1.15.1"
]
gpu = [
    "torch==2.0.1+cu118",
    "torchaudio==2.0.2+cu118",
    "torchvision==0.15.2+cu118",
    "flash-attn==2.0.0"
]
extras = [
    "pytorch-lightning==2.0.0",
    "transformers==4.30.0",
    "wandb==0.15.0"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]